--- a/src/main/resources/static/css/km/selectitem.css
+++ b/src/main/resources/static/css/km/selectitem.css
@@ -729,3 +729,66 @@ section
 	font-weight: 500;
 	cursor: pointer;
 }
+
+/* --------------------------------------------- */
+/* 물품 상세 - 공구 참여 및 공구 개설 버튼 */
+.tablediv {
+	padding: 0 !important;
+	margin-top: 10px !important;
+}
+.scrolltable {
+	table-layout: fixed;
+	border-collapse: collapse;
+	border-left: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
+
+/* 행 장식 */
+.scrolltable th,
+.scrolltable td {
+	padding: 10px;
+	text-align: left;
+	width: 100px;
+	text-align: center;
+	font-size: 0.8rem;
+}
+
+.scrolltable tbody {
+	/* background-color: #f8f7f5; */
+}
+
+.scrolltable thead {
+	display: block;
+	background: rgb(148, 175, 160);
+	color: #fff;
+}
+
+
+.scrolltable tbody {
+	display: block;
+	overflow: auto;
+	height: 250px;
+}
+
+.open-btn {
+	border: 1px solid #6d9275 !important;
+	color: #4e6854;
+	/* background-color: #6d9275;
+	 color: #ebebeb; */
+	font-size: 16px;
+	border: none;
+}
+
+.participate-btn {
+	border: 2px solid #6d9275 !important;
+	color: #4e6854;
+	/* background-color: #6d9275;
+	color: #ebebeb; */
+	font-size: 0.8rem;
+	border: none;
+	padding: 3px 6px;
+}
+.open-btn:hover, .participate-btn:hover {
+	background-color: #6d9275;
+	color: #ebebeb;
+}
