--- a/src/main/resources/templates/mj/seller/iteminsert.html
+++ b/src/main/resources/templates/mj/seller/iteminsert.html
@@ -143,9 +143,25 @@
                         가격 : <input type="text" name="price"><br>
                         수량 : <input type="text" name="quantity"><br>
                         사업자번호 : <input type="text" name="regNo"><br>
-                        대분류 
-                        소분류 : <input type="text" name="scategoryCode"><br>
-                        <input type="submit" value="등록"><br>
+                        카테고리 : 
+                        <!-- 대분류 -->
+                        <select id="LcateSelect" th:field="${cate.Lcode}" onchange="updateMcateSelect()">
+                            <option value="000">대분류</option>
+                            <option th:each="obj : ${cate.Llist}" th:value="${obj.code.longValue()}" th:text="${obj.name}"></option>
+                        </select>
+                        <!-- 중분류 -->
+                        <select id="McateSelect" th:field="${cate.Mcode}" onchange="updateScateSelect()">
+                            <option value="000">중분류</option>
+                            <option th:each="obj1 : ${cate.Mlist}" th:value="${obj1.code.longValue()}" th:text="${obj1.name}"></option>
+                            <!-- <option value="">-- Select Middle Category --</option> -->
+                        </select>
+                        <!-- 소분류 -->
+                        <select id="ScateSelect" th:field="${cate.Scode}" onchange="updateUrl()">
+                            <option value="000">소분류</option>
+                            <option th:each="obj2 : ${cate.Slist}" th:value="${obj2.code.longValue()}" th:text="${obj2.name}"></option>
+                            <!-- <option value="">-- Select Small Category --</option> -->
+                        </select><br>
+                        <input type="button" value="등록" onclick="insertImage()"><br>
                     </form>
 
 
@@ -210,6 +226,47 @@
         });
     </script>
 
+    <script th:inline="javascript">
+        function updateMcateSelect() {
+            const code = document.getElementById("LcateSelect").value;
+            console.log(code);
+            window.location.href = `/SOBUN/seller/item/insert.do?lcate=${code}`;
+        }
+
+        function updateScateSelect() {
+            const code = document.getElementById("LcateSelect").value;
+            const mcode = document.getElementById("McateSelect").value;
+            console.log(code);
+            console.log(mcode);
+            window.location.href = `/SOBUN/seller/item/insert.do?lcate=${code}&mcate=${mcode}`;
+        }
+
+        function updateUrl() {
+            const code = document.getElementById("LcateSelect").value;
+            const mcode = document.getElementById("McateSelect").value;
+            const scode = document.getElementById("ScateSelect").value;
+            console.log(code);
+            console.log(mcode);
+            console.log(scode);
+            window.location.href = `/SOBUN/seller/item/insert.do?lcate=${code}&mcate=${mcode}&scate=${scode}`;
+        }
+        
+        </script>
+        <script>
+            function insertImage() {
+                if(!confirm('물품등록이 완료되었습니다. 이미지를 등록하시겠습니까?')){
+                    // 아니요(취소)
+                    window.location.href = `/SOBUN/seller/item/management.do`;
+                    
+                }
+                else{
+                    // 확인(이미지등록 페이지로 이동)
+                    alert('예.이미지등록');
+                    window.location.href = `/SOBUN/seller/item/updateimage.do`;
+                }
+            }
+
+        </script>
 </body>
 
 </html>
